# kaizen

./: .gitignore  db.sqlite3  kaizendb  package-lock.json  package.json  pyproject.toml  r.txt  requirements.txt  tailwind.config.js
api/: serializers.py  urls.py  views.py
contacts/: admin.py  forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py
contacts/templates/contacts/: booking.html  car-hire.html  contactpage.html  success.html  (+1 more)
destinations/: admin.py  models.py  urls.py  views.py
destinations/migrations/: 0001_initial.py  0002_alter_day_activity_alter_day_best_buy_alter_day_day_and_more.py  0003_itinerary_details_itinerary_price.py  0004_alter_day_description_alter_itinerary_details.py  0005_alter_itinerary_price.py
kaizen/: .envtemp  asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_topspot.py  0003_topspot_feature.py  0004_topspot_image.py  0005_honeymoonspot_honeymoonimages.py  0006_alter_honeymoonimages_options_and_more.py  0007_remove_honeymoonimages_destination_and_more.py  0008_alter_honeymoonimages_spot.py
main/templatetags/: custom_filters.py
static/: package-lock.json  package.json  tailwind.config.js
static/css/: obs.min.css  style.css  style.min.css  tailwind.css
static/js/: main.js  scroll.js
static/src/: index.ts  main.scss
static/video/: homehero.m4v
templates/: 404.html  500.html  base.html
templates/components/: footer.html  header.html
templates/emails/: honeymoonemail_template.html  itineraryemail_template.html
(+15 files in other folders)
